2004-05-25  Chris Toshok  <toshok@ximian.com>

	[ fixes #58654 ]
	
	* gui/component/select-names/e-select-names.c (update_query):
	build up the query using e_book_query calls so we're insulated
	from field name changes.  also, conjoin if we have more than 1
	query element, not more than 2 (i *hope* this was an off by 1
	error...)

2004-05-25 Sivaiah Nallagatla   <snallagatla@novell.com>

        * gui/component/addressbook.c (load_source_auth_cb )
        (load_source_auth_cb ) : read the "auth-domain" property
        from e-source and use it as the component name for e_password_*
        calls if it exists

2004-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* Makefile.am: Generate the addressbook-errors.xml.h file and
	install the xml file and all that jazz.

	* addressbook-errors.xml: New error xml file.

	* gui/widgets/e-addressbook-view.c (backend_died): Use
	e_error_run().

	* gui/widgets/eab-gui-util.c (eab_error_dialog): Use
	e_error_run().
	(eab_load_error_dialog): Same.
	(eab_search_result_dialog): Same.
	(eab_prompt_save_dialog): Same.
	(save_it): Same.

	* gui/contact-editor/e-contact-editor.c (categories_clicked): Use
	e_error_run().
	(e_contact_editor_is_valid): Same.
	(save_contact): Same.

	* gui/component/addressbook-view.c (delete_addressbook_cb): Use
	e_error_run().

	* gui/component/addressbook-config.c (addressbook_ldap_init): Use
	e_error_run().
	(addressbook_ldap_auth): Same.
	(addressbook_root_dse_query): Same.
	(do_ldap_root_dse_query): Same.
	(do_schema_query): Same.

2004-05-24  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (SUBDIRS): add tools back to the build.

2004-05-24  Chris Toshok  <toshok@ximian.com>

	* tools/Makefile.am: fix this for current build foo.

	* tools/evolution-addressbook-export-list-folders.c,
	* tools/evolution-addressbook-export-list-cards.c, 
	* tools/evolution-addressbook-export.c:  revive this.

2004-05-24  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #32194 ]
	